Fix ipad landscape overlap

--- a/themes/hallo/assets/scss/hallo/_base.scss
+++ b/themes/hallo/assets/scss/hallo/_base.scss
@@ -25,7 +25,7 @@ a {
 }
 
 h1 {
-    font-size: 7rem;
+    font-size: 6rem;
 }
 
 h2 {
@@ -34,7 +34,7 @@ h2 {
 }
 @media screen and (max-width: $break-large) {
     h1 {
-        font-size: 10vw;
+        font-size: 5rem;
     }
 
     h2 {
